migrate code to jdk11+, reduce usage of 3rd party libs